--- a/design/style/Main.css
+++ b/design/style/Main.css
@@ -122,12 +122,33 @@ label{
     font-size: 15px;
 }
 
+#search_profile{
+    height: 45px;
+    width: 250px;
+    border-radius: 12px;
+    font-size: 15px;
+}
+
 #search_btn{
     height: 50px;
     width: 70px;
     border-radius:12px;
     font-size: 15px;
     cursor: pointer;
+}
+
+#LoginTab{
+    float: right;
+}
+
+#WelcomeDisplay{
+    float: right;
+    padding-right: 50px;
+    padding-top: 15px;
+    width: 215px;
+    display: none;
+    background: none; 
+    border:none;
 }
 
 .useradminmenu{  
@@ -150,4 +171,25 @@ label{
     padding: 10px;  
     background: #ffffff;  
     border-radius: 15px ;  
+}
+
+.mnguserprofilemenu{  
+    width: 450px;  
+    height: 500px;
+    overflow: hidden;  
+    margin: auto;  
+    margin: 20 0 0 450px;  
+    padding: 10px;  
+    background: #23463f;  
+    border-radius: 15px ; 
+}
+
+.mnguserprofilearea{  
+    width: 430px;  
+    height: 410px;
+    overflow: hidden;  
+    margin: auto;    
+    padding: 10px;  
+    background: #ffffff;  
+    border-radius: 15px ;
 }
