--- a/style/main.css
+++ b/style/main.css
@@ -71,18 +71,20 @@ body {
     overflow: hidden;  
     margin: auto;
     padding: 40px;  
-    background: #23463f;  
-    border-radius: 15px;
+    border-color: #333;
+    border-style: solid;  
+    border-radius: 10px;
 }  
 
 h2{  
     text-align: center;  
-    color: #ffffff;  
+    color: black;  
 }
 
 label{  
-    color: #08ffd1;  
-    font-size: 17px;  
+    color: black;  
+    font-size: 17px;
+    padding: 5px;  
 }
 
 #login_form {
@@ -125,11 +127,11 @@ label{
 
 #login_btn{  
     width: 300px;  
-    height: 30px;  
-    border: none;  
-    border-radius: 17px;  
+    height: 35px;  
+    border: 2px solid;  
+    border-radius: 10px;  
     padding-left: 7px;  
-    color: blue;
+    color: black;
     cursor: pointer;
 }
 
@@ -238,6 +240,7 @@ label{
 }
 
  .btn {  /* Create button */
+    width: 250px;
     border: 2px solid black;
     background-color: white;
     color: black;
