Update create profile alignment and header text

--- a/style/main.css
+++ b/style/main.css
@@ -317,7 +317,7 @@ label{
 /* ======================= */
 
 /* PROFILE PAGE */
-.profileCenterTable {
+.profileCenterTable, .createProfileTable {
     margin-left: auto;
     margin-right: auto;
     /* width: 290px; */
