--- a/style/main.css
+++ b/style/main.css
@@ -190,10 +190,10 @@ label{
 
 
 /* USER PAGE */
-.userCenterTable {
+.createUserTable, .viewTable {
     margin-left: auto;
     margin-right: auto;
-    /* width: 270px; */
+    width: 70%;
 }
 
 .createUserTable tr, .viewTable tr{
@@ -261,8 +261,9 @@ label{
 }
 
 .searchResultTable { /* manage user account page: grey hover width */
-    width: 100%;
-    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
 }
 
 .searchResultTable tr:hover { /* manage user account page: grey hover */
@@ -317,7 +318,7 @@ label{
 /* ======================= */
 
 /* PROFILE PAGE */
-.profileCenterTable, .createProfileTable {
+.profileCenterTable, .createProfileTable, .viewProfileTable {
     margin-left: auto;
     margin-right: auto;
     /* width: 290px; */
@@ -363,8 +364,10 @@ label{
 }
 
 .searchProfileTable {
-    width: 100%;
+    width: 70%;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .searchProfileTable tr {
@@ -385,5 +388,12 @@ label{
 #searchProfile_header {
     text-align: center;
     pointer-events: none;
+}
+
+.viewProfileTable .errorRow{
+    height: 16px;
+    font-size: 12px;
+    color: red;
+    text-align: left;
 }
 /* ======================= */
