--- a/style/main.css
+++ b/style/main.css
@@ -135,6 +135,90 @@ label {
     cursor: pointer;
 }
 
+/* ====== View User Details ====== */
+.userDetails {
+    width: 500px;
+    min-height: 500px;
+    overflow: hidden;
+    margin: auto;
+    margin: 20 0 0 450px;
+    padding: 16px;
+    border-color: #333;
+    box-shadow: 4px 2px #888888;
+    border-style: solid;
+    border-radius: 10px;
+}
+
+.userDetailsTable {
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
+.userDetailsTable td {
+    padding: 5px;
+}
+
+.userDetailsTable th {
+    font-size: 28px;
+    padding: 5px;
+}
+
+
+#userDetails_name {
+    /* manage user account page: input field + 4 below */
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+#userDetails_password {
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+#userDetails_fname {
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+#userDetails_lname {
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+#userDetails_profile {
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+#userDetails_status {
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+/* ====== End View User Details ====== */
+
+
+
+
 /* Search bar */
 .searchBar {
     height: 45px;
