--- a/style/main.css
+++ b/style/main.css
@@ -991,3 +991,121 @@ label {
 }
 
 /* ======================= */
+
+.manageMenuItemMenu {
+    width: 500px;
+    min-height: 500px;
+    overflow: hidden;
+    margin: auto;
+    margin: 20 0 0 450px;
+    padding: 16px;
+    border-color: #333;
+    box-shadow: 4px 2px #888888;
+    border-style: solid;
+    border-radius: 10px;
+}
+
+.manageMenuItemArea {
+    width: 474px;
+    min-height: 410px;
+    overflow: hidden;
+    margin: auto;
+    padding: 10px;
+    background: #ffffff;
+    border-radius: 8px;
+    /* overflow: auto; */
+}
+
+#createMenuItem_name,
+#viewMenuItem_name,
+#createMenuItem_imageName,
+#viewMenuItem_imageName,
+#createMenuItem_price,
+#viewMenuItem_price {
+    width: 200px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+}
+
+#createMenuItem_category,
+#viewMenuItem_category {
+    width: 213px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
+    float: left;
+}
+
+.searchMenuItemResultTable {
+    /* manage user account page: grey hover width */
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
+.searchMenuItemResultTable tr:hover {
+    /* manage user account page: grey hover */
+    background-color: rgb(203, 203, 203);
+}
+
+.searchMenuItemResultTable tr {
+    height: 30px;
+    text-align: left;
+}
+
+#searchMenuItem_result td {
+    /* display: none;
+    margin-left: auto;
+    margin-right: auto; */
+    border-bottom: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+#searchMenuItem_result tr:hover {
+    background-color: #ddd;
+}
+
+#searchMenuItemResult_header {
+    text-align: center;
+    pointer-events: none;
+    /* position: sticky;
+    top: 0;
+    background: #eee;
+    padding: 8px 20px; */
+}
+
+.createMenuItemTable,
+.viewMenuItemTable {
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
+.createMenuItemTable tr,
+.viewMenuItemTable tr {
+    height: 30px;
+}
+
+.createMenuItemTable td,
+.viewMenuItemTable td {
+    padding: 5px;
+}
+
+.createMenuItemTable th,
+.searchMenuItemResultTable th,
+.viewMenuItemTable th {
+    font-size: 28px;
+    padding: 5px;
+}
+
+.createMenuItemTable .errorRow,
+.viewMenuItemTable .errorRow {
+    height: 16px;
+    font-size: 12px;
+    color: red;
+    text-align: left;
+}
