--- a/style/main.css
+++ b/style/main.css
@@ -1083,6 +1083,10 @@ label {
 .createCouponTable #createCoupon_category {
     /* staff order page - dropdown box */
     width: 214px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 3px;
+    padding-left: 8px;
 }
 /* ======= End New Coupon Code ======== */
 
@@ -1108,11 +1112,6 @@ label {
 .searchCouponTable .tableHead {
     font-weight: bold;
 }
-
-.searchCouponTable tr {
-    float: left;
-}
-
 
 .searchCouponTable td {
     /* display: none;
